tests/rosetta/transpiler/CPP/deepcopy-1.error
compile: exit status 1
/workspace/mochi/tests/rosetta/transpiler/CPP/deepcopy-1.cpp:20:181: warning: multi-character character constant [-Wmultichar]
   20 |     else if(val.type() == typeid(std::vector<int64_t>)) { const auto& v = std::any_cast<const std::vector<int64_t>&>(val); os << '['; for(size_t i=0;i<v.size();++i){ if(i>0) os << ', '; os << v[i]; } os << ']'; }
      |                                                                                                                                                                                     ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/deepcopy-1.cpp:21:209: warning: multi-character character constant [-Wmultichar]
   21 |     else if(val.type() == typeid(std::vector<std::vector<int64_t>>)) { const auto& vv = std::any_cast<const std::vector<std::vector<int64_t>>&>(val); os << '['; for(size_t i=0;i<vv.size();++i){ if(i>0) os << ', '; const auto& v = vv[i]; os << '['; for(size_t j=0;j<v.size();++j){ if(j>0) os << ', '; os << v[j]; } os << ']'; } os << ']'; }
      |                                                                                                                                                                                                                 ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/deepcopy-1.cpp:21:295: warning: multi-character character constant [-Wmultichar]
   21 |     else if(val.type() == typeid(std::vector<std::vector<int64_t>>)) { const auto& vv = std::any_cast<const std::vector<std::vector<int64_t>>&>(val); os << '['; for(size_t i=0;i<vv.size();++i){ if(i>0) os << ', '; const auto& v = vv[i]; os << '['; for(size_t j=0;j<v.size();++j){ if(j>0) os << ', '; os << v[j]; } os << ']'; } os << ']'; }
      |                                                                                                                                                                                                                                                                                                       ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/deepcopy-1.cpp:22:189: warning: multi-character character constant [-Wmultichar]
   22 |     else if(val.type() == typeid(std::vector<std::string>)) { const auto& v = std::any_cast<const std::vector<std::string>&>(val); os << '['; for(size_t i=0;i<v.size();++i){ if(i>0) os << ', '; os << v[i]; } os << ']'; }
      |                                                                                                                                                                                             ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/deepcopy-1.cpp:23:183: warning: multi-character character constant [-Wmultichar]
   23 |     else if(val.type() == typeid(std::vector<std::any>)) { const auto& v = std::any_cast<const std::vector<std::any>&>(val); os << '['; for(size_t i=0;i<v.size();++i){ if(i>0) os << ', '; any_to_stream(os, v[i]); } os << ']'; }
      |                                                                                                                                                                                       ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/deepcopy-1.cpp:24:215: warning: multi-character character constant [-Wmultichar]
   24 |     else if(val.type() == typeid(std::map<std::string, std::any>)) { const auto& m = std::any_cast<const std::map<std::string, std::any>&>(val); os << '{'; bool first=true; for(const auto& p : m){ if(!first) os << ', '; first=false; os << p.first << ': '; any_to_stream(os, p.second); } os << '}'; }
      |                                                                                                                                                                                                                       ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/deepcopy-1.cpp:24:251: warning: multi-character character constant [-Wmultichar]
   24 |     else if(val.type() == typeid(std::map<std::string, std::any>)) { const auto& m = std::any_cast<const std::map<std::string, std::any>&>(val); os << '{'; bool first=true; for(const auto& p : m){ if(!first) os << ', '; first=false; os << p.first << ': '; any_to_stream(os, p.second); } os << '}'; }
      |                                                                                                                                                                                                                                                           ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/deepcopy-1.cpp:71:129: warning: multi-character character constant [-Wmultichar]
   71 |  << ", " << "'m': "<< "{"; bool first_3=true; for(const auto& p: v.m){ if(!first_3) os << ", "; first_3=false; os << p.first << ': ' << p.second; } os << "}"
      |                                                                                                                                 ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/deepcopy-1.cpp: In function ‘std::map<long int, bool> copyMap(const std::map<long int, bool>&)’:
/workspace/mochi/tests/rosetta/transpiler/CPP/deepcopy-1.cpp:95:38: error: conversion from ‘const std::pair<const long int, bool>’ to non-scalar type ‘std::map<long int, bool>’ requested
   95 |     for (std::map<int64_t, bool> k : src) {
      |                                      ^~~
/workspace/mochi/tests/rosetta/transpiler/CPP/deepcopy-1.cpp:96:13: error: invalid ‘static_cast’ from type ‘std::map<long int, bool>’ to type ‘size_t’ {aka ‘long unsigned int’}
   96 |         out[static_cast<size_t>(k)] = ([&](auto& __m){ auto __it = __m.find(static_cast<size_t>(k)); return __it != __m.end() ? __it->second : false; })(src);
      |             ^~~~~~~~~~~~~~~~~~~~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/deepcopy-1.cpp: In lambda function:
/workspace/mochi/tests/rosetta/transpiler/CPP/deepcopy-1.cpp:96:77: error: invalid ‘static_cast’ from type ‘std::map<long int, bool>’ to type ‘size_t’ {aka ‘long unsigned int’}
   96 |         out[static_cast<size_t>(k)] = ([&](auto& __m){ auto __it = __m.find(static_cast<size_t>(k)); return __it != __m.end() ? __it->second : false; })(src);
      |                                                                             ^~~~~~~~~~~~~~~~~~~~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/deepcopy-1.cpp: In lambda function:
/workspace/mochi/tests/rosetta/transpiler/CPP/deepcopy-1.cpp:123:138: error: invalid ‘static_cast’ from type ‘std::pair<const long int, bool>’ to type ‘size_t’ {aka ‘long unsigned int’}
  123 |  return ss.str(); }())) + std::string(":")) + ([&]{ std::ostringstream ss; ss << std::boolalpha << ([&](auto& __m){ auto __it = __m.find(static_cast<size_t>(k)); return __it != __m.end() ? __it->second : false; })(c.m); return ss.str(); }()));
      |                                                                                                                                          ^~~~~~~~~~~~~~~~~~~~~~
